# yast-python-bindings2

./: .gitignore  README.md  configure.ac
package/: yast2-python-bindings.spec  yast2-python-bindings2.spec
src/: Makefile  Makefile.am  Y2CCPythonClient.cc  Y2PythonClientComponent.cc  Y2PythonClientComponent.h  YCP_UI.h  __init__.py  wrap.cpp  wrap.h  yast-core.i  yast.cpp  yast.h  yast.py  ytypes.cpp  ytypes.h  ytypes.py
